@@ -2455,9 +2455,9 @@ cob_get_s64_pic9 (void *mem, int len)
 		case 'R': val = val * 10 + 9; sign = -1; break;
 		}
 #else
-		if (*p & 0xC0) {
+		if ((*p & 0xF0) == 0xC0) {
 			sign = 1;
-		} else if (*p & 0xD0) {
+		} else if ((*p & 0xF0) == 0xD0) {
 			sign = -1;
 		}
 		val = val * 10 + COB_D2I (*p);
